force-app/main/default/objects/ApplicantIncome__c/ApplicantIncome__c.object-meta.xml
<CustomObject>
    <description>Income object to record various incomes of an Applicant.</description>
    <label>Applicant Income</label>
    <nameField>
        <label>Applicant Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicant Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>