force-app/main/default/objects/ApplicantIncome__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Applicant Incomes</relationshipLabel>
    <relationshipName>ApplicantIncomes</relationshipName>
    <type>Lookup</type>
</CustomField>