force-app/main/default/objects/ApplicantIncome__c/fields/IncomeType__c.field-meta.xml
<CustomField>
    <fullName>IncomeType__c</fullName>
    <description>Type of Income e.g. Salary, Rent.</description>
    <label>Income Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>